[APP] BSR - Fix english version for date in letters
Ex : 3 June 2020 instead of June 3, 2020

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -757,7 +757,7 @@
             "actions": {
                 "continue": "Continue my Pix experience"
             },
-            "explanation": "You already submitted the profile below to the organisation {organization}'<br>'on {date,date,LL} at {hour,time,hhmm}"
+            "explanation": "You already submitted the profile below to the organisation {organization}'<br>'on {date} at {hour,time,hhmm}"
         },
         "reset-password": {
             "actions": {
