--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -325,6 +325,11 @@
                                     "solution": "Votre connexion internet est peut-être trop faible.'<br>'Rechargez la page en appuyant sur le bouton actualiser '<object type=\"image/svg+xml\" class=\"tuto-icon\" data=\"/images/icons/icon-reload.svg\"></object>' à côté de la barre d’adresse. Attendez un peu, le simulateur va peut-être s’afficher. '<br><br>'Si ce n’est pas le cas, pouvez-vous retenter à un autre moment ou depuis un autre endroit avec une meilleure connexion ?"
                                 },
                                 "embed-other": "Le simulateur / l’application a un autre problème",
+                                "link-unauthorized": {
+                                    "label": "Le lien est bloqué par mon organisation / établissement...",
+                                    "solution": "Vous appartenez peut-être à une organisation (établissements scolaires, universitaires, entreprises, administrations, association...) qui protège ses utilisateurs et ses équipements en limitant les pages Internet auxquelles vous avez accès.'<br>'"
+                                },
+                                "link-other": "Le lien ne fonctionne pas ou a un autre problème",
                                 "other-challenge-proposal": "J’ai une idée (géniale) d’épreuve à proposer",
                                 "other-site-improvement": "J’ai une suggestion d’amélioration de la plateforme",
                                 "other-difficulty": "J’ai un autre problème",
