Modify page title when the challenge is timed out

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -249,6 +249,7 @@
         },
         "challenge": {
             "title": "Question {stepNumber} of {totalChallengeNumber}",
+            "timed-out-title": "Timed out - Question {stepNumber} of {totalChallengeNumber}",
             "actions": {
                 "continue": "Continue",
                 "validate": "Validate",
