[ORGA] translate missing aria-label in user-logged-menu (and delete useless one)

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -85,7 +85,8 @@
       "team": "Team"
     },
     "user-logged-menu": {
-      "logout": "Log out"
+      "logout": "Log out",
+      "summary": "User summary"
     }
   },
   "pages": {
