--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -297,21 +297,34 @@
     },
     "campaign-review": {
       "description": "En fonction du référentiel testé et des résultats de la campagne, Pix vous recommande ces sujets à travailler, classés par degré de pertinence ({bubble}).",
-      "header": {
-        "title": "Analyse par sujet",
-        "relevance": "Pertinence",
-        "subjects": "Sujets ({count, plural, =0 {-} other {{count}}})"
+      "sub-table": {
+        "column": {
+          "source": {
+            "value": "Par {source}"
+          }
+        },
+        "row-title": "Tutoriel",
+        "title": "{count, plural, =1 {1 tuto recommandé} other{{count} tutos recommandés}} par la communauté Pix"
       },
-      "title": "Recommandation de sujets à travailler",
-      "tube-recommendations": {
-        "name": "Tutoriel",
-        "recommended-tutorial": "{count, plural, =1 {1 tuto recommandé} other{{count} tutos recommandés}} par la communauté Pix",
-        "show-tutorial": "Afficher la liste des tutos",
-        "subject": "Sujet",
-        "tutorial-source": "Par {source}",
-        "tutorial-total": "{count, plural, =1 {1 tuto} other {{count} tutos}}"
+      "table": {
+        "column": {
+          "subjects": "Sujets ({count, plural, =0 {-} other {{count}}})",
+          "relevance": "Pertinence",
+          "tutorial-count": {
+            "value": "{count, plural, =1 {1 tuto} other {{count} tutos}}"
+          },
+          "tutorial": {
+            "aria-label": "Afficher la liste des tutos"
+          }
+        },
+        "empty": "En attente de résultats",
+        "row-title": "Sujet",
+        "sort": {
+          "relevance": "Trier par pertinence"
+        },
+        "title": "Analyse par sujet"
       },
-      "waiting-results": "En attente de résultats"
+      "title": "Recommandation de sujets à travailler"
     },
     "certifications": {
       "description": "Sélectionnez la classe pour laquelle vous souhaitez exporter les résultats de certification au format csv.<br> Vous pouvez filtrer cette liste en renseignant le nom de la classe directement dans le champ.",
