--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -513,7 +513,6 @@
       },
       "edit-student-number-modal": {
         "actions": {
-          "cancel": "Annuler",
           "update": "Mettre à jour"
         },
         "form": {
@@ -551,43 +550,6 @@
       },
       "title": "Étudiants"
     },
-    "team-items": {
-      "row": {
-        "aria-label": "Membre"
-      },
-      "actions": {
-        "edit-organization-membership-role": {
-          "aria-label": "Modifier le rôle",
-          "label": "Modifier le rôle"
-        },
-        "remove-membership": {
-          "aria-label": "Supprimer le membre",
-          "label": "Supprimer"
-        }
-      },
-      "select-input": {
-        "placeholder": "Sélectionner un rôle",
-        "aria-label": "Sélectionner un rôle",
-        "options": {
-          "admin-label": "Administrateur",
-          "member-label": "Membre"
-        }
-      },
-      "save-button": "Enregistrer",
-      "cancel-button": {
-        "aria-label": "Annuler"
-      },
-      "remove-membership-modal": {
-        "title": "Confirmez-vous la suppression ?",
-        "message": "n'aura plus accès à cet espace Pix Orga.<br>Ses campagnes restent accessibles au reste de l'équipe.",
-        "cancel-button": "Annuler",
-        "remove-button": "Oui, supprimer le membre"
-      },
-      "notifications": {
-        "success": "{memberFirstName} {memberLastName} a été supprimé avec succès de votre équipe Pix Orga.",
-        "error": "Une erreur est survenue lors de la désactivation du membre."
-      }
-    },
     "team-list": {
       "title": "Mon équipe",
       "add-member-button": "Inviter un membre",
@@ -597,13 +559,38 @@
       }
     },
     "team-members": {
+      "actions": {
+        "edit-organization-membership-role": "Modifier le rôle",
+        "manage": "Gérer",
+        "remove-membership": "Supprimer",
+        "save": "Enregistrer",
+        "select-role": {
+          "label": "Sélectionner un rôle",
+          "options": {
+            "admin": "Administrateur",
+            "member": "Membre"
+          }
+        }
+      },
+      "remove-membership-modal": {
+        "actions": {
+          "remove": "Oui, supprimer le membre"
+        },
+        "title": "Confirmez-vous la suppression ?",
+        "message": "{memberFirstName} {memberLastName} n'aura plus accès à cet espace Pix Orga.<br>Ses campagnes restent accessibles au reste de l'équipe."
+      },
+      "notifications": {
+        "success": "{memberFirstName} {memberLastName} a été supprimé avec succès de votre équipe Pix Orga.",
+        "error": "Une erreur est survenue lors de la désactivation du membre."
+      },
       "table": {
         "column": {
           "first-name":"Prénom",
           "last-name":"Nom",
           "organization-membership-role":"Rôle"
         },
-        "empty": "En attente de membres"
+        "empty": "En attente de membres",
+        "row-title": "Membre"
       }
     },
     "team-invitations": {
@@ -635,11 +622,7 @@
     },
     "team-new-item": {
       "input-label": "Adresse(s) e-mail",
-      "cancel-button": "Annuler",
       "invite-button": "Inviter"
     }
-  },
-  "dropdown": {
-    "arial-label": "Afficher les actions"
   }
 }
