--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -112,8 +112,7 @@
           "competences": "Compétences ({count, plural, =0 {-} other {{count}}})",
           "results": {
             "label": "Résultats",
-            "explanation-begin": "Ce participant a validé ",
-            "explanation-end": " de la compétence {competence}."
+            "tooltip": "<span class=\"sr-only\">Ce participant a validé</span> {result} % <span class=\"sr-only\">de la compétence {competence}.</span>"
           },
           "totalSkills": "Acquis évalués",
           "validatedSkills": "Acquis validés"
@@ -176,10 +175,14 @@
     },
     "campaign-collective-results": {
       "average": "Moyenne des résultats",
+      "result": "Résultat",
       "table": {
         "column": {
           "competences": "Compétences ({count})",
-          "results": "Résultat",
+          "results": {
+            "label": "Résultats",
+            "tooltip": "<span class=\"sr-only\">Les participants ont validé</span> {result} % <span class=\"sr-only\">de la compétence {competence}.</span>"
+          },
           "tested-items": "Acquis évalués",
           "validated-items": "Acquis validés"
         },
