--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -1125,7 +1125,8 @@
             "eula": "CGU",
             "help-center": "Centre d'aide",
             "link-a11y": "https://pix.fr/accessibilite",
-            "link-help-center": "https://pix.fr/aide"
+            "link-help-center": "https://pix.fr/aide",
+            "sitemap": "Plan du site"
         },
         "main": {
             "code": "J'ai un code",
