Add a translation for auto aria label

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -266,6 +266,9 @@
                 "skip": "Skip"
             },
             "already-answered": "You have already answered this question",
+            "answer-input": {
+                "numbered-label": "Answer {number}"
+            },
             "certification": {
                 "title": "Certification {certificationNumber}",
                 "banner": {
