--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -35,6 +35,7 @@
         },
         "form": {
             "error": "error",
+            "invisible-password": "Hide password",
             "mandatory": "required",
             "mandatory-fields": "The fields marked '<abbr title=\"required\" class=\"mandatory-mark\">'*'</abbr>' are required",
             "success": "success",
@@ -827,6 +828,7 @@
                 "message": "There was an error in the email address or username/password entered."
             },
             "fields": {
+                "legend": "Informations de connexion",
                 "login": {
                     "label": "Email address or username"
                 },
