--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -35,6 +35,7 @@
         },
         "form": {
             "error": "erreur",
+            "invisible-password": "cacher le mot de passe",
             "mandatory": "obligatoire",
             "mandatory-fields": "Les champs marqués de '<abbr title=\"obligatoire\" class=\"mandatory-mark\">'*'</abbr>' sont obligatoires",
             "success": "correct",
@@ -827,6 +828,7 @@
                 "message": "L'adresse e-mail ou l'identifiant et/ou le mot de passe saisis sont incorrects"
             },
             "fields": {
+                "legend": "Informations de connexion",
                 "login": {
                     "label": "Adresse e-mail ou identifiant"
                 },
