[APP] Modify link and style for the PE connect button

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -844,10 +844,9 @@
             },
             "or":"OR",
             "pole-emploi": {
-                "title": "",
+                "title": "Sign-in with pôle Emploi",
                 "link": {
-                    "title": "Pôle Emploi",
-                    "img": "picture Pôle Emploi"
+                    "img": "pôle emploi connect"
                 }
             }
         },
