--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -569,7 +569,7 @@
                 "title": "Compétences recommandées"
             },
             "improvable-competences": {
-                "profile-link": "Voir toutes",
+                "profile-link": "Toutes les compétences",
                 "subtitle": "Prêt à faire passer votre compétence au niveau supérieur ?",
                 "title": "Retenter une compétence"
             },
